--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "^0.15.3",
     "react": "15.4.2",
-    "react-native": "0.41.2"
+    "react-native": "0.41.2",
+    "react-native-simple-modal": "^4.0.2",
+    "realm": "^1.0.2"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
